Refactor signature retrieval method in tests
Replaced `get(0)` with `getFirst()` for clarity and safety when retrieving the first signature in `PdfSignerPropertyTest`. Also removed the unused `NotEmpty` import from `PdfBoxGeneratorPropertyTest` to clean up the code.